--- a/lib/kd_web/live/home_live.html.heex
+++ b/lib/kd_web/live/home_live.html.heex
@@ -8,44 +8,46 @@
         fill="none"
         viewBox="0 0 24 24"
         stroke="currentColor"
-        >
+      >
         <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-            />
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+        />
       </svg>
     </button>
     <input
-          class="w-full px-2 py-2 text-sm border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1"
-          phx-debounce="300"
-          placeholder=""
-          name="q"
-          id="q"
-          value={@query}
-        />
+      class="w-full px-2 py-2 text-sm border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1"
+      phx-debounce="300"
+      placeholder=""
+      name="q"
+      id="q"
+      value={@query}
+    />
   </form>
 </div>
 
-<div :for={entry <- @entries} class="flex flex-col p-4 space-y-2 hover:bg-gray-100 hover:rounded-md">
+<div
+  :for={entry <- @entries}
+  class="flex flex-col p-4 space-y-2 hover:bg-gray-100 hover:rounded-md"
+>
   <div>
-    <span :if={entry.subword != ""} class="font-bold">
-      <%= entry.subword %>
-      </span>
-      <span :if={entry.subword == ""} class="font-bold">
-      <%= entry.main %>
-        </span>
-        <span :if={entry.part_of_speech != ""}>[ <%= entry.part_of_speech %> ]</span>
-          </div>
-          <p><%= entry.definition %></p>
-            <div :if={entry.example != ""}>
-            <span>ឧទាហរណ៍៖</span>
-            <%= entry.example %>
-              </div>
-              <div :if={entry.pronunciation != ""}>
-              <span>អានថា៖</span>
-              <%= entry.pronunciation %>
+    <span class="font-bold">
+      <%= get_word(entry) %>
+    </span>
+    <span :if={entry.part_of_speech != ""} class="text-gray-600">
+      [ <%= entry.part_of_speech %> ]
+    </span>
+  </div>
+
+  <p><%= entry.definition %></p>
+  <div :if={entry.example != ""}>
+    <span class="text-gray-600">ឧទាហរណ៍៖</span>
+    <%= entry.example %>
+  </div>
+  <div :if={entry.pronunciation != ""}>
+    <span class="text-gray-600">អានថា៖</span>
+    <%= entry.pronunciation %>
   </div>
 </div>
-
