--- a/lib/kd_web/live/home_live.html.heex
+++ b/lib/kd_web/live/home_live.html.heex
@@ -1,31 +1,33 @@
-<h1 class="text-4xl">វចនានុក្រមខ្មែរ</h1>
-<div class="relative my-2">
-  <form phx-submit="search">
-    <button class="absolute top-2 right-2" type="submit">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="w-6 h-6 opacity-60"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-        />
-      </svg>
-    </button>
-    <input
-      class="w-full px-2 py-2 text-sm border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1"
-      phx-debounce="300"
-      placeholder=""
-      name="q"
-      id="q"
-      value={@query}
-    />
-  </form>
+<div class="h-18 px-4 py-4 sticky top-0 w-full bg-slate-100 flex flex-row">
+  <h1 class="text-4xl mr-4">វចនានុក្រមខ្មែរ</h1>
+  <div class="relative w-64">
+    <form phx-submit="search">
+      <button class="absolute top-2 right-2" type="submit">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="w-6 h-6 opacity-60"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+          />
+        </svg>
+      </button>
+      <input
+        class="w-full px-2 py-2 text-sm border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1"
+        phx-debounce="300"
+        placeholder=""
+        name="q"
+        id="q"
+        value={@query}
+      />
+    </form>
+  </div>
 </div>
 
 <div
