--- a/lib/kd_web/live/home_live.html.heex
+++ b/lib/kd_web/live/home_live.html.heex
@@ -19,7 +19,7 @@
         </svg>
       </button>
       <input
-        class="w-full px-2 py-2 text-sm border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1"
+        class="w-full px-2 py-2 text-md border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1"
         phx-debounce="300"
         placeholder=""
         name="q"
@@ -56,9 +56,9 @@
       </span>
     </p>
 
-    <div class="flex gap-2">
+    <div class="flex gap-2 flex-wrap">
       <div :for={sub <- entry.subwords}>
-        <div class="rounded-md px-2 py-1 text-gray-600 bg-gray-300 hover:bg-gray-400 hover:text-white">
+        <div class="rounded-md px-4 py-1 text-md text-gray-600 bg-gray-300 hover:bg-gray-400 hover:text-white">
           <%= sub["main"] %>
         </div>
       </div>
