--- a/lib/kd_web/live/home_live.html.heex
+++ b/lib/kd_web/live/home_live.html.heex
@@ -1,7 +1,7 @@
 <div class="h-18 px-4 py-4 sticky top-0 w-full bg-slate-400 flex flex-row mb-4">
   <h1 class="text-4xl mr-4">វចនានុក្រមខ្មែរ</h1>
   <div class="relative w-64">
-    <form phx-submit="search">
+    <form phx-submit="search" phx-change="search">
       <button class="absolute top-2 right-2" type="submit">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -20,7 +20,6 @@
       </button>
       <input
         class="w-full px-2 py-2 text-md border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1"
-        phx-debounce="300"
         placeholder=""
         name="q"
         id="q"
