--- a/lib/kd_web/live/home_live.html.heex
+++ b/lib/kd_web/live/home_live.html.heex
@@ -1,8 +1,11 @@
-<div class="h-18 px-4 py-4 sticky top-0 w-full bg-slate-400 flex flex-row mb-4">
-  <h1 class="text-4xl mr-4">វចនានុក្រមខ្មែរ</h1>
+<div class="h-18 px-4 py-4 sticky top-0 w-full bg-slate-500 flex flex-row mb-4">
+  <div class="flex gap-2">
+    <img src="/images/flag-button-round-250.png" class="w-12 h-12" />
+    <h1 class="text-4xl mr-4 font-title mt-2">វចនានុក្រមខ្មែរ</h1>
+  </div>
   <div class="relative w-64">
     <form phx-submit="search" phx-change="search">
-      <button class="absolute top-2 right-2" type="submit">
+      <button class="absolute top-3 right-3" type="submit">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="w-6 h-6 opacity-60"
@@ -19,7 +22,7 @@
         </svg>
       </button>
       <input
-        class="w-full px-2 py-2 text-md border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1"
+        class="w-full px-4 py-2 h-12 text-md border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-2 ring-slate-400"
         placeholder=""
         name="q"
         id="q"
@@ -30,41 +33,43 @@
   </div>
 </div>
 
-<.async_result :let={entries} assign={@entries}>
-  <div
-    :for={entry <- entries}
-    class="flex flex-col p-4 space-y-2 hover:bg-sky-200 hover:rounded-md"
-  >
-    <.entry
-      main={entry.main}
-      definition={entry.definition}
-      part_of_speech={entry.part_of_speech}
-      pronunciation={entry.pronunciation}
-      example={entry.example}
-    />
-    <div class="flex flex-row gap-2 w-full flex-wrap">
-      <div
-        :for={sub <- entry.subwords}
-        class="subword-btn rounded-md px-4 py-1 text-md text-gray-600 bg-gray-300 hover:bg-sky-500 hover:text-white cursor-pointer"
-        id={"subword-#{sub["id"]}-btn"}
-        phx-click={toggle_subword(sub["id"])}
-      >
-        <%= sub["main"] %>
-      </div>
-    </div>
-
+<div class="m-4">
+  <.async_result :let={entries} assign={@entries}>
     <div
-      :for={sub <- entry.subwords}
-      class="subword hidden pl-4 rounded-md border-[1px] py-2 border-sky-400 bg-sky-300 hover:border-sky-500 hover:bg-sky-400"
-      id={"subword-#{sub["id"]}"}
+      :for={entry <- entries}
+      class="flex flex-col p-4 space-y-2 hover:bg-sky-200 hover:rounded-md"
     >
       <.entry
-        main={sub["main"]}
-        definition={sub["definition"]}
-        part_of_speech={sub["part_of_speech"]}
-        pronunciation={sub["pronunciation"]}
-        example={sub["example"]}
+        main={entry.main}
+        definition={entry.definition}
+        part_of_speech={entry.part_of_speech}
+        pronunciation={entry.pronunciation}
+        example={entry.example}
       />
+      <div class="flex flex-row gap-2 w-full flex-wrap">
+        <div
+          :for={sub <- entry.subwords}
+          class="subword-btn rounded-md px-4 py-1 text-md text-gray-600 bg-gray-300 hover:bg-sky-500 hover:text-white cursor-pointer"
+          id={"subword-#{sub["id"]}-btn"}
+          phx-click={toggle_subword(sub["id"])}
+        >
+          <%= sub["main"] %>
+        </div>
+      </div>
+
+      <div
+        :for={sub <- entry.subwords}
+        class="subword hidden pl-4 space-y-2 rounded-md border-[1px] py-2 border-sky-400 bg-sky-300 hover:border-sky-500 hover:bg-sky-400"
+        id={"subword-#{sub["id"]}"}
+      >
+        <.entry
+          main={sub["main"]}
+          definition={sub["definition"]}
+          part_of_speech={sub["part_of_speech"]}
+          pronunciation={sub["pronunciation"]}
+          example={sub["example"]}
+        />
+      </div>
     </div>
-  </div>
-</.async_result>
+  </.async_result>
+</div>
