--- a/lib/kd_web/live/home_live/entry.html.heex
+++ b/lib/kd_web/live/home_live/entry.html.heex
@@ -9,6 +9,9 @@
     <span class="text-gray-600">អានថា៖</span>
     <%= @pronunciation %>
   </div>
+  <div>
+   <span phx-click="speak" phx-value-text={@main} class="cursor-pointer relative"><.icon name="hero-speaker-wave hover:text-blue-600"/></span>
+   </div>
 </div>
 
 <p>
