--- a/lib/kd_web/live/home_live.html.heex
+++ b/lib/kd_web/live/home_live.html.heex
@@ -1,4 +1,4 @@
-<div class="h-18 px-4 py-4 sticky top-0 w-full bg-slate-500 flex flex-row mb-4">
+<div class="h-20 px-4 py-4 sticky top-0 w-full bg-slate-500 flex flex-row mb-4">
   <div class="flex gap-2">
     <img src="/images/flag-button-round-250.png" class="w-12 h-12" />
     <h1 class="text-4xl mr-4 font-title mt-2">វចនានុក្រមខ្មែរ</h1>
@@ -32,7 +32,8 @@
     </form>
   </div>
 </div>
-
+<div id="audio-player" phx-hook="AudioHook">
+</div>
 <div class="m-4">
   <.async_result :let={entries} assign={@entries}>
     <div
