2-become-1 intro. docker-compose

--- a/lib/kd_web/live/home_live.html.heex
+++ b/lib/kd_web/live/home_live.html.heex
@@ -32,8 +32,7 @@
     </form>
   </div>
 </div>
-<div id="audio-player" phx-hook="AudioHook">
-</div>
+<div id="media" phx-hook="AudioHook" />
 <div class="m-4">
   <.async_result :let={entries} assign={@entries}>
     <div
