--- a/lib/kd_web/live/home_live/entry.html.heex
+++ b/lib/kd_web/live/home_live/entry.html.heex
@@ -7,10 +7,9 @@
   </div>
   <div :if={@pronunciation != ""}>
     <span class="text-gray-600">អានថា៖</span>
-    <%= @pronunciation %>
+    <%= @pronunciation %> <span phx-click="speak" phx-value-text={@main} class="cursor-pointer relative"><.icon name="hero-speaker-wave hover:text-blue-600"/></span>
   </div>
   <div>
-   <span phx-click="speak" phx-value-text={@main} class="cursor-pointer relative"><.icon name="hero-speaker-wave hover:text-blue-600"/></span>
    </div>
 </div>
 
