--- a/lib/kd_web/live/home_live.html.heex
+++ b/lib/kd_web/live/home_live.html.heex
@@ -1,10 +1,10 @@
 <div class="h-20 px-4 py-4 sticky top-0 w-full bg-slate-500 flex flex-col sm:flex-row mb-8 md:mb-4 z-50">
   <div class="flex gap-2 mb-2 md:mb-0">
     <img src="/images/flag-button-round-250.png" class="w-8 h-8 sm:w-12 sm:h-12" />
-    <h1 class="text-xl md:text-4xl mr-4 font-title mt-1 md:mt-2">វចនានុក្រមខ្មែរ</h1>
+    <h1 class="text-2xl md:text-4xl mr-4 font-title mt-1 md:mt-2">វចនានុក្រមខ្មែរ</h1>
   </div>
 
-  <div class="relative w-full md:w-64">
+  <div class="relative w-full sm:w-[320px] lg:w-64">
     <form phx-submit="search" phx-change="search">
       <button class="absolute top-3 right-3" type="submit">
         <svg
