--- a/lib/kd_web/components/layouts/root.html.heex
+++ b/lib/kd_web/components/layouts/root.html.heex
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Khmer Dictionary with text-to-speech capability" />
     <meta name="csrf-token" content={get_csrf_token()} />
     <.live_title suffix=" · Khmer Dictionary">
       <%= assigns[:page_title] || "Home" %>
