--- a/lib/kd_web/live/home_live.html.heex
+++ b/lib/kd_web/live/home_live.html.heex
@@ -5,7 +5,7 @@
   </div>
 
   <div class="relative w-full sm:w-[320px] lg:w-64">
-    <form phx-submit="search" phx-change="search">
+    <form id="form1" phx-submit="search" phx-change="search">
       <button class="absolute top-3 right-3" type="submit">
         <svg
           xmlns="http://www.w3.org/2000/svg"
